# sample-mise

./: .gitignore  README.md  mise.toml  pyproject.toml
app/: main.py
mise/: config.toml
